@@ -86,7 +86,8 @@ setup(name=name,
         ),
     package_data={
         'trytond.modules.sale_supply_drop_shipment': (info.get('xml', [])
-            + ['tryton.cfg', 'view/*.xml', 'locale/*.po', 'tests/*.rst']),
+            + ['tryton.cfg', 'view/*.xml', 'locale/*.po', 'icons/*.svg',
+                'tests/*.rst']),
         },
     classifiers=[
         'Development Status :: 5 - Production/Stable',
