@@ -13,4 +13,5 @@ xml:
     stock.xml
     sale.xml
     purchase.xml
+    party.xml
     message.xml
