@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//group[@id='links']" position="inside">
+        <link icon="tryton-shipment-drop" name="sale_supply_drop_shipment.act_shipment_drop_relate_party" empty="hide"/>
+    </xpath>
+</data>
